kubernetes/quotes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes-service
  namespace: default
spec:
  selector:
    app: quotes
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
  type: ClusterIP
